chore: 实时同步任务调整
