# docs/swagger.yaml
@@ -10,9 +10,6 @@ definitions:
     type: object
   model.Record:
     properties:
-      Progress:
-        description: 进度 0-100
-        type: integer
       cost_time:
         description: 耗时 单位 s
         type: integer
@@ -44,12 +41,6 @@ definitions:
       status:
         description: 任务状态 请走action接口去修改。
         type: string
-      success_files:
-        description: 成功文件数
-        type: integer
-      success_size:
-        description: 走公网消耗流量的大小 单位 B
-        type: integer
       task_id:
         description: 任务ID
         type: string
@@ -84,8 +75,8 @@ definitions:
         type: string
       is_deleted:
         type: boolean
-      is_overwrite:
-        description: 是否覆盖 默认覆盖 true
+      is_server_side:
+        description: 是否跨区域,默认启用，决定是否流量经过本地，涉及到流量费用
         type: boolean
       is_silence:
         description: 是否静默 默认false 静默不发送通知
@@ -103,6 +94,7 @@ definitions:
         description: 任务名称
         type: string
       source_profile:
+        default: proxy
         description: 源Profile配置 可选 cn9554,cn3977,cn0536,us7478,us0066,us1549,tx-cn,tx-us
         example: cn3977
         type: string
@@ -116,10 +108,11 @@ definitions:
         description: 提交人
         type: string
       sync_mode:
-        description: 运行模式, syncOnce,KeepSync
+        description: 默认运行模式 syncOnce 一次性任务, KeepSync 持续同步
         example: syncOnce
         type: string
       target_profile:
+        default: proxy
         description: 目标Profile配置 可选 cn9554,cn3977,cn0536,us7478,us0066,us1549,tx-cn,tx-us
         example: us7478
         type: string
@@ -136,10 +129,12 @@ definitions:
         type: string
       updated_at:
         type: string
-      worker:
-        description: worker节点
+      worker_tag:
+        description: 任务执行节点, 用于标记任务归属于哪个worker,会涉及到费用，需要注意选择正确的workerTag。借鉴与gitlab
+          CICD runner.
         type: string
     required:
+    - is_server_side
     - name
     - source_profile
     - source_url
@@ -147,6 +142,7 @@ definitions:
     - sync_mode
     - target_profile
     - target_url
+    - worker_tag
     type: object
   model.TaskExecInput:
     properties:
@@ -180,7 +176,7 @@ definitions:
       updated_at:
         type: string
     type: object
-host: localhost:8080
+host: localhost:8012
 info:
   contact:
     name: Patsnap DevOps Team
@@ -250,6 +246,30 @@ paths:
       tags:
       - record
   /api/v1/record/{id}:
+    get:
+      consumes:
+      - application/json
+      description: get task record detail
+      parameters:
+      - description: task id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Record'
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: get task record detail
+      tags:
+      - record
     put:
       consumes:
       - application/json
